memory segment all the way